@@ -1,3 +1,8 @@
+2007-02-02  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/28266
+	* g++.dg/parse/defarg12.C: New test.
+
 2007-02-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/30536
