@@ -1,3 +1,9 @@
+2007-02-02  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/28266
+	* gimplify.c (gimplify_target_expr): Make sure that the TARGET_EXPR is
+	expanded only once even if an error occurs.
+
 2007-02-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/30473
